fixing spacing for h2s

--- a/css/main.scss
+++ b/css/main.scss
@@ -57,6 +57,7 @@ h2{
   width: calc(100% + #{$page_padding * 2});
   background-color: $h2_background;
   margin-left: -$page_padding;
+  margin-bottom: $page_padding
   padding: $page_padding/2 $page_padding;
   box-sizing: border-box;
 }
@@ -65,7 +66,7 @@ a{
   color: inherit;
 }
 ul{
-  margin: $page_padding 0;
+  margin: 0 0 $page_padding 0;
 }
 
 li{
